package com.group.avenue.middle.atm.project.model;

/**
 * @author vladimir_shi
 * @since 29.12.2025
 *
 * Номиналы банкнот, поддерживаемых банкоматом.
 * Значения хранятся в рублях.
 */
public enum Banknote {
    RUB_50(50),
    RUB_100(100),
    RUB_200(200),
    RUB_500(500),
    RUB_1000(1000),
    RUB_2000(2000),
    RUB_5000(5000);

    private final int valueInRubles;

    Banknote(int valueInRubles) {
        this.valueInRubles = valueInRubles;
    }

    public int getValue() {
        return valueInRubles;
    }
}